<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:columnCount="2">

    <TextView
        android:id="@+id/tv_connectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/headsetBeginning" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change" />

    <Button
        android:id="@+id/btn_streamState"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_columnSpan="2"
        android:text="Start/Stop collecting data" />

    <TextView
        android:id="@+id/tv_synchronizationState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/synchronization" />

    <Button
        android:id="@+id/btn_synchronization"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change" />

    <TextView
        android:id="@+id/tv_synchronize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/synchronizeOn" />

    <Button
        android:id="@+id/btn_synchronizeOn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change" />

    <Button
        android:id="@+id/btn_synchronizeNow"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/synchronizeNow" />

    <TextView
        android:layout_columnSpan="2"
        android:text="Webservice address" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/et_webAddress"
        android:text="@string/webservice_base"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Just to asure proper distribution of elements in grid"
        android:visibility="gone" />

</GridLayout>