<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:columnCount="2"
             android:rowCount="3"
             android:layout_gravity="center"
             android:gravity="center"
    >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_field"
            />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_field"
            />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:password="true"

            />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_button"
            />
    </TableRow>
</TableLayout>